2015 part 1 and 2, hooray rust and brute force

--- a/2015/.gitignore
+++ b/2015/.gitignore
@@ -20,4 +20,6 @@ day*/Cargo.lock
 # End of https://www.toptal.com/developers/gitignore/api/rust
 
 day*/.idea
+day*/resources/input.txt
 day*/resource/input.txt
+t
